MB-50647: Bypass ConnMap notification

ConnMap pendingNotifications queue is a bit redundant - background
threads can safely call

 engine.scheduleDcpStep(...)

often via

 DcpProducer::immediatelyNotify()

There is no need to queue connections requiring notification.

In addition, AtomicQueue is limited to being used by 500 threads
ever, including threads which have since been destroyed.

Once the queue is no longer needed, AtomicQueue can be removed

Change-Id: I19ea40cafe5772ca32737b9891ad93abb4af9d5c
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/169939
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>