engines/ep/src/dcp/producer.h
@@ -234,17 +234,10 @@ public:
     }
 
     /**
-     * Notifies the front-end synchronously on this thread that this paused
+     * Notifies the front-end asynchronously that this paused
      * connection should be re-considered for work.
      */
     void immediatelyNotify();
-
-    /**
-     * Schedule a notification to the front-end on a background thread for
-     * the ConnNotifier to pick that notifies this paused connection should
-     * be re-considered for work.
-     */
-    void scheduleNotify();
 
     void setLastReceiveTime(const rel_time_t time) {
         lastReceiveTime = time;
